# trie_dictionary

./: .gitignore  CMakeLists.txt
main/: trie_dictionary.cpp
src/: advanced_search.cpp  console_interface.cpp  main_structure.cpp  trie_dictionary.hpp
test/: unit_test.cpp
